@@ -1,3 +1,7 @@
+2015-05-11  gepr  <gepr@tempusdictum.com>
+
+	* agg.r: Script to aggregate (mean) data from several trials.
+
 2015-05-07  gepr  <gepr@tempusdictum.com>
 
 	* cmp-by-model.r: Fix usage.
